--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,9 @@
   
   <div class="card">
 
-<span class="top-suite">&spades;</span>
-<span class="number">7</span>
-<span class="bottom-suite">&spades;</span>
+<span class="top-suite"></span>
+<span class="number"></span>
+<span class="bottom-suite"></span>
 
   </div>
 
